--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -12,7 +12,7 @@
         android:layout_margin="5dp">
 
         <TextView
-            android:id="@+id/item_name"
+            android:id="@+id/linkName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="7dp"
@@ -20,16 +20,16 @@
             android:textColor="@android:color/black"
             android:textSize="15sp"
             android:textStyle="bold"
-            android:text="@string/list_item_name" />
+            android:text="@string/linkName" />
 
         <TextView
+            android:id="@+id/linkValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/item_name"
+            android:layout_below="@+id/linkName"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
-            android:id="@+id/item_desc"
-            android:text="@string/list_item_value" />
+            android:text="@string/linkValue" />
 
 
     </RelativeLayout>
