Added different colors

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -17,8 +17,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="7dp"
             android:layout_marginStart="10dp"
-            android:textColor="@android:color/black"
-            android:textSize="15sp"
+            android:textColor="@color/purple_500"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:text="@string/linkName" />
 
@@ -29,7 +29,9 @@
             android:layout_below="@+id/linkName"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
-            android:text="@string/linkValue" />
+            android:text="@string/linkValue"
+            android:textStyle="italic"
+            android:textColor="@color/purple_500"/>
 
 
     </RelativeLayout>
