--- a/app/src/main/res/layout/activity_locator.xml
+++ b/app/src/main/res/layout/activity_locator.xml
@@ -9,22 +9,13 @@
     tools:context=".LocatorActivity">
 
     <TextView
-        android:id="@+id/latitudeValue"
+        android:id="@+id/locationValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="150dp"
-        android:layout_marginTop="262dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="260dp"
         android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/longitudeValue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="3dp"
-        android:layout_marginTop="63dp"
-        android:text="TextView"
-        app:layout_constraintStart_toStartOf="@+id/latitudeValue"
-        app:layout_constraintTop_toBottomOf="@+id/latitudeValue" />
 </androidx.constraintlayout.widget.ConstraintLayout>
