Changed layout to have values on separate lines

--- a/app/src/main/res/layout/activity_locator.xml
+++ b/app/src/main/res/layout/activity_locator.xml
@@ -9,13 +9,25 @@
     tools:context=".LocatorActivity">
 
     <TextView
-        android:id="@+id/locationValue"
+        android:id="@+id/latitudeValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="260dp"
-        android:text="TextView"
+        android:text="Latitude:"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/longitudeValue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="36dp"
+        android:text="Longitude:"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/latitudeValue" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
